--- a/app/views/static_page/index.html.haml
+++ b/app/views/static_page/index.html.haml
@@ -1,92 +1,55 @@
-Main nav: Home, How-to, Contact Us
-
-%h1
-  Turn your emails into reminders,
-  %i quickly!
-%h4
-  Be more productive by focussing on what’s important right now.
-  %br
-  Clear out your inbox and schedule reminders for future tasks with Hound.cc.
-
-%table
-  %tr
-    %td{style: 'width: 210px'}
-      = image_tag('200x300.gif')
+%ul.tour
+  %li
+    %span.number 1
+    .tour-content
+      %h2 Many uses and even more benefits
       %p
-        %strong 1. Send us an email
+        The team can focus on their current tasks without having to worry about the client deliverable just yet. They will be reminded about it in due course and will have enough time to get it delivered.
+        %br
+        %br
+        The team can focus on their current tasks without having to worry about the client deliverable just yet. They will be reminded about it in due course and will have enough time to get it delivered.
+      = image_tag('100x100.gif', :width=>"400px", :height=>"200px")
 
-    %td{style: 'width: 210px'}
-      = image_tag('200x300.gif')
+  %li
+    %span.number 2
+    .tour-content
+      %h2 Many uses and even more benefits
       %p
-        %strong 2. We'll send you a reminder
+        The team can focus on their current tasks without having to worry about the client deliverable just yet. They will be reminded about it in due course and will have enough time to get it delivered.
+        %br
+        %br
+        The team can focus on their current tasks without having to worry about the client deliverable just yet. They will be reminded about it in due course and will have enough time to get it delivered.
+      = image_tag('100x100.gif', :width=>"400px", :height=>"200px")
 
-    %td{style: 'width: 210px'}
-      = image_tag('200x300.gif')
+  %li
+    %span.number 3
+    .tour-content
+      %h2 Many uses and even more benefits
       %p
-        %strong 3. Snooze it or get it done
+        The team can focus on their current tasks without having to worry about the client deliverable just yet. They will be reminded about it in due course and will have enough time to get it delivered.
+        %br
+        %br
+        The team can focus on their current tasks without having to worry about the client deliverable just yet. They will be reminded about it in due course and will have enough time to get it delivered.
+      = image_tag('100x100.gif', :width=>"400px", :height=>"200px")
 
-%h3
-  =link_to 'Free sign-up','#', class: 'big_button'
-  =link_to 'Watch video','#', class: 'big_button'
-%br
+  %li
+    %span.number 4
+    .tour-content
+      %h2 Many uses and even more benefits
+      %p
+        The team can focus on their current tasks without having to worry about the client deliverable just yet. They will be reminded about it in due course and will have enough time to get it delivered.
+        %br
+        %br
+        The team can focus on their current tasks without having to worry about the client deliverable just yet. They will be reminded about it in due course and will have enough time to get it delivered.
+      = image_tag('100x100.gif', :width=>"400px", :height=>"200px")
 
-%h2 Making your life easier...
-
-%table{style: 'width: 820px'}
-  %tr
-    %td
-      = image_tag('100x100.gif', style: 'float:left; padding-right: 5px')
-      %strong Nothing to install
-      %br
-      Schedule and snooze reminders directly from your inbox - it’s as easy as sending an email.
-    %td
-      = image_tag('100x100.gif', style: 'float:left; padding-right: 5px')
-      %strong Focus on what's important
-      %br
-      If an email doesn’t have to be dealt with right away, forward it to us and forget about it.
-  %tr
-    %td
-      = image_tag('100x100.gif', style: 'float:left; padding-right: 5px')
-      %strong Use it your way
-      %br
-      BCC us on an email thread to create a private reminder for yourself or CC us to remind a group of people.
-    %td
-      = image_tag('100x100.gif', style: 'float:left; padding-right: 5px')
-      %strong It's quick and easy
-      %br
-      Take a look through our examples and you’ll be good to go!
-  %tr
-    %td
-      = image_tag('100x100.gif', style: 'float:left; padding-right: 5px')
-      %strong Link multiple email addresses to one account
-      %br
-      Set reminders via your work and personal email addresses and see them in the same Hound.cc account.
-    %td
-      = image_tag('100x100.gif', style: 'float:left; padding-right: 5px')
-      %strong It’s free
-      %br
-      While we’re in beta, all we ask is that you provide us with honest feedback so we can keep making Hound.cc better for you
-
-%h2 Many uses and even more benefits
-%div{style: 'width: 820px'}
-  {slider with multiple use cases}
-  %p
-    A client has asked your team to have a deliverable completed by the end of next week.
-  %p
-    %strong The problem:
-    You’re team is too busy to start work on the deliverable right now as they have other deadlines.
-    Tell them now and risk it being forgotten or having them crack under the stress
-  %p
-    %strong The solution:
-    Forward the client’s email to the team, adding in that they should only start work
-    on it when they receive the reminder, and cc in ‘nextwednesday@hound.cc’.
-  %p
-    %strong The result:
-    The team can focus on their current tasks without having to worry about the client deliverable just yet.
-    They will be reminded about it in due course and will have enough time to get it delivered.
-
-
-
-
-
-
+  %li
+    %span.number 5
+    .tour-content
+      %h2 Many uses and even more benefits
+      %p
+        The team can focus on their current tasks without having to worry about the client deliverable just yet. They will be reminded about it in due course and will have enough time to get it delivered.
+        %br
+        %br
+        The team can focus on their current tasks without having to worry about the client deliverable just yet. They will be reminded about it in due course and will have enough time to get it delivered.
+      = image_tag('100x100.gif', :width=>"400px", :height=>"200px")
