--- a/app/assets/stylesheets/_variables.css.scss
+++ b/app/assets/stylesheets/_variables.css.scss
@@ -12,9 +12,9 @@ $line-height: 1.4;  // 1.4 for true normalization
 $font-color: #222;
 $font-family: sans-serif;
 $font-size: 1em;
-$link-color: #00e;
-$link-hover-color: #06e;
-$link-visited-color: #551a8b;
+//$link-color: #00e;
+//$link-hover-color: #06e;
+//$link-visited-color: #551a8b;
 $selected-font-color: #fff;
 $selected-background-color: #ff5e99;
 $invalid-background-color: #f0dddd;
