--- a/app/views/layouts/_head.html.haml
+++ b/app/views/layouts/_head.html.haml
@@ -14,7 +14,7 @@
 
 -# Place favicon.ico and apple-touch-icon.png in the root directory: mathiasbynens.be/notes/touch-icons
 
-= stylesheet_link_tag "application"
+= stylesheet_link_tag "screen"
 
 -# More ideas for your <head> here: h5bp.com/d/head-Tips
 
