added airbrake notifier

--- a/app/views/layouts/_head.html.haml
+++ b/app/views/layouts/_head.html.haml
@@ -17,6 +17,8 @@
 = stylesheet_link_tag "screen"
 = stylesheet_link_tag "application"
 
+= airbrake_javascript_notifier
+
 -# More ideas for your <head> here: h5bp.com/d/head-Tips
 
 -# All JavaScript at the bottom, except polyfills
