remove application.css.scss & include old application.css for temp styles

--- a/app/views/layouts/_head.html.haml
+++ b/app/views/layouts/_head.html.haml
@@ -15,6 +15,7 @@
 -# Place favicon.ico and apple-touch-icon.png in the root directory: mathiasbynens.be/notes/touch-icons
 
 = stylesheet_link_tag "screen"
+= stylesheet_link_tag "application"
 
 -# More ideas for your <head> here: h5bp.com/d/head-Tips
 
