--- a/app/views/layouts/_head.html.haml
+++ b/app/views/layouts/_head.html.haml
@@ -5,7 +5,7 @@
 %meta{ 'http-equiv' => 'X-UA-Compatible', :content => 'IE=edge,chrome=1' }/
 
 %title
-  == #{ controller.controller_name.titleize } - #{ controller.action_name.titleize }
+  = "Hound.cc : " + (content_for?(:title) ? content_for(:title) : "Turn your emails into reminders, quickly!")
 
 %meta{ :name => "description", :content => "" }/
 
