add privacy policy

--- a/app/views/layouts/static_page.html.haml
+++ b/app/views/layouts/static_page.html.haml
@@ -36,6 +36,7 @@
         %p &copy; Copyright 2012 Siyelo
         %ul
           %li= link_to 'Terms of Use', 'terms-of-use'
+          %li= link_to 'Privacy Policy', 'privacy-policy'
           %li= mail_to 'info@hound.cc', 'Contact Us'
 
     = javascript_include_tag "application"
