improve copy on landing page
add twitter button, improve feature listing on index

--- a/app/views/layouts/static_page.html.haml
+++ b/app/views/layouts/static_page.html.haml
@@ -38,5 +38,5 @@
           %li= link_to 'Terms of Use', 'terms-of-use'
           %li= link_to 'Privacy Policy', 'privacy-policy'
           %li= mail_to 'info@hound.cc', 'Contact Us'
-
+        = render 'layouts/twitter_button'
     = javascript_include_tag "application"
