--- a/app/views/reminders/edit.js.erb
+++ b/app/views/reminders/edit.js.erb
@@ -1,6 +1,6 @@
 $('.inline_reminder').fadeIn(300)
 $('.inline_reminder').html("<%=j render 'form' %>");
-$('#reminder_mail_body').tinymce({
+$('#reminder_body').tinymce({
       theme: "advanced",
       theme_advanced_buttons1: "bold,italic,underline, strikethrough",
       theme_advanced_buttons2: "",
