--- a/app/views/reminders/update.js.erb
+++ b/app/views/reminders/update.js.erb
@@ -1,6 +1,6 @@
-<% if @reminder_mail.errors.empty? %>
+<% if @reminder.errors.empty? %>
   $('.inline_reminder').hide();
-  $("#reminder<%= @reminder_mail.reminder.id%>_row").replaceWith("<%=j render @reminder_mail.reminder %>")
+  $("#reminder<%= @reminder.id %>_row").replaceWith("<%=j render @reminder %>")
   $('.status').show().html('saved');
   $('.status').fadeOut(2000).delay(1000);
 <% else %>
