add about us, remove privacy policy and home links

--- a/app/views/static_page/how-to.html.haml
+++ b/app/views/static_page/how-to.html.haml
@@ -10,7 +10,7 @@ To get started with Hound.cc, all you have to do is send us an email!
       %li
         %span To: or Cc:
         Hound sends a reminder to you (the sender) and
-        any other recipients.
+        the other recipients (if any).
       %li
         %span Bcc:
         Hound only sends you a reminder.
