--- a/app/views/layouts/static_page.html.haml
+++ b/app/views/layouts/static_page.html.haml
@@ -13,12 +13,10 @@
           = link_to 'Hound.cc', '/'
 
         %nav#main-nav
-          %li= link_to 'Home', '/', :class => cp("/")
           %li= link_to 'How To', '/how-to', :class => cp("how-to")
           %li= link_to 'FAQ', '/faq', :class => cp("faq")
-          %li= link_to 'Pricing', '/pricing', :class => cp("pricing")
+          %li= link_to 'About', '/about', :class => cp("about")
           - unless user_signed_in?
-            %li= link_to 'Sign up', new_user_registration_path
             %li= link_to 'Login', new_user_session_path
           - else
             %li= link_to current_user.email, edit_user_registration_path
