--- a/app/views/static_page/index.html.haml
+++ b/app/views/static_page/index.html.haml
@@ -4,7 +4,7 @@
   %h3
     Hound is an email-based productivity and scheduling tool. It helps you clear out your inbox and to focus on what’s important right now.
   %p.signup-wrap
-    = mail_to '2minutes@hound.cc', "Try it now!", :subject => 'Send me a reminder in 2 minutes!', body: 'Hound will automatically remind you about this email in 2 minutes!', :class=>"signup button"
+    = mail_to '2minutes@hound.cc', "Try it now - free!", :subject => 'Send me a reminder in 2 minutes!', body: 'Hound will automatically remind you about this email in 2 minutes!', :class=>"signup button"
     %span Get started within seconds
   %ul.short-guide
     %li
