--- a/app/views/static_page/privacy-policy.html.haml
+++ b/app/views/static_page/privacy-policy.html.haml
@@ -27,7 +27,7 @@
     emails about enhancements to hound.cc of tips and ways of using the system.
   %li
     You can unsubscribe from all mailings at any time by emailing us at
-    = mail_to 'info@hound.cc'
+    = mail_to 'support@hound.cc'
   %li
     Neither Hound.cc nor any third party associated with Hound.cc will ever
     send you unsolicited emails not directly related to providing assistance
