--- a/app/views/user_mailer/_invite.html.haml
+++ b/app/views/user_mailer/_invite.html.haml
@@ -6,5 +6,5 @@
   Since this is the first time we've seen you on Hound, please verify your
   email address by opening the link below:
 
-%p=link_to "Yes it's me! Activate my account!", @accept_user_invitation_url
+%p=link_to "Yes it's me! Activate my account!", @activate_url
 
