--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -2,7 +2,7 @@
 %html
   %head
     = render 'layouts/head'
-    
+
   %body
     #container
       = render "layouts/chromeframe"
@@ -11,7 +11,7 @@
 
           %h1#logo
             = link_to 'Hound.cc', '/'
-            
+
           %nav#main-nav
             %li= link_to 'How To', '/how-to', :class => cp("how-to")
             %li= link_to 'FAQ', '/faq', :class => cp("faq")
@@ -20,19 +20,19 @@
               %li=link_to 'Sign up', new_user_registration_path
               %li= link_to 'Login', new_user_session_path
             - else
-              %li= link_to current_user.email, edit_user_registration_path
+              %li= link_to 'Settings', settings_path
               %li= link_to 'Logout', destroy_user_session_path, :method => :delete
       - flash.each do |name, msg|
         = content_tag :div, msg, :id => "flash_#{name}", :class => 'flash'
       %section.app
         .wrapper
           = yield
-          
+
       .push
 
     %footer#footer
       .wrapper
-        
+
         %ul.horizontal
           %li= link_to 'Terms of Use', 'terms-of-use'
           %li= link_to 'Privacy Policy', 'privacy-policy'
