--- a/app/views/devise/registrations/edit.html.haml
+++ b/app/views/devise/registrations/edit.html.haml
@@ -9,7 +9,7 @@
   %div
     = f.label :timezone
     %br
-    = f.time_zone_select :timezone, ActiveSupport::TimeZone.us_zones, :default => "Pacific Time (US & Canada)"
+    = f.time_zone_select :timezone, nil, :default => "Pacific Time (US & Canada)"
   %div
     = f.check_box :confirmation_email
     = f.label "Receive confirmation emails?"
