--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -10,7 +10,7 @@
   <%= f.password_field :password %></div>
 
   <div><%= f.label :timezone %><br />
-    <%= f.time_zone_select :timezone, ActiveSupport::TimeZone.us_zones, :default => "Pacific Time (US & Canada)" %></div><br />
+    <%= f.time_zone_select :timezone, nil, :default => "Pacific Time (US & Canada)" %></div><br />
 
   <div><%= f.submit "Sign up" %></div>
   <br />
