--- a/app/views/reminders/_reminder.html.haml
+++ b/app/views/reminders/_reminder.html.haml
@@ -1,6 +1,6 @@
 %tr.reminder{id: "reminder#{reminder.id}_row"}
   %td.large
-    = link_to reminder.subject, edit_reminder_path(reminder), remote: true, class: 'subject_link'
+    = link_to reminder_subject(reminder), edit_reminder_path(reminder), remote: true, class: 'subject_link'
   %td.large= reminder.send_at.to_formatted_s(:short_with_day)
   %td.small
     = form_tag reminder_path(reminder.id), method: :put, remote: true do
